# LLM_chat_bot_test_task

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: chat.py  health.py
app/core/: config.py  database.py  logging.py
app/models/: __init__.py  db.py  schemas.py
app/repositories/: __init__.py  message_repository.py  session_repository.py
app/services/: llm_service.py
benchmarks/: benchmark.py
data/: chat_dev.db
